nullaway_error_b508ab8f-52c9-4e9f-ba9e-c82d80209f36.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/CustomPropertyProvider.java:63: error: [NullAway] dereferenced expression this.getProperty(propertyName) is @Nullable
    this.getProperty(propertyName).setType(type);
                                  ^
    (see http://t.uber.com/nullaway )
